--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="withdraw   status">
 
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
 
                 </div>
 
@@ -128,7 +128,10 @@
         withdrawBtn.addEventListener('click', function(){
 
             const withdrawNumber = getInputNumber("withdrawAmount");
-            console.log(withdrawNumber)
+            
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1*withdrawNumber);
+            document.getElementById("withdrawAmount").value = "";
         })
 
 
